2006-09-02  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Use XMLPrinter for XQTS.log instead of
	"hand-formatted" XML.
	(log): Remove OutPort field.
	(xqlog): Replace it bey XMLPrinter field.
	(main): Initialize appropriately.
	(handleStartTag, report, evalTest, endGroup): Update appropriately.
	(report): Always emit <test-case> report regardless of verbose flag.

2006-08-31  Per Bothner  <per@bothner.com>

	* RunXQTS.java: No point in using an XMLPrinter to filter the
	catalog itself.  Instead, filter to a CharArrayOutPort.
	(sout, sbuf, xout): Remove fields.  Replace by ...
	(cout): New CharArrayOutPort field.
	(elementStartIndex): Change to array indexed by nesting level.

	* TestSuite.java: Remove unneeded import.

2006-08-24  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Add support for modules.
	Update for newer testsuite, and new fixes.

	* mod2a.xql: New module, in same namespace as mod2.xql.
	* usemod.xql: Also pull in a variable for mod2a.
	* usemod.exp: Update expected output.
	* Makefile.am: Update for extra class, plus that compiled library
	modules are now compiled to a seprate package for each namespace.

2006-08-17  Per Bothner  <per@bothner.com>

	* TestMisc.java: Update error column.

2006-08-08  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Run application to run XQTS (XQuery Test Suite).
	* Makefile.am (RunXQTS.class, check-XQTS): New files.

2006-05-31  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval): Update ModuleExp.evalModule call.

2006-05-21  Per Bothner  <per@bothner.com>

	* expected-1.errs: Update for fixed typo in error message.

2006-03-26  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): Replace call to removed 'string-value'
	function by standard 'string'.

2006-03-15  Per Bothner  <per@bothner.com>

	* expected-1.errs: Update for changed error message.

2006-03-14  Per Bothner  <per@bothner.com>

	* TestMisc.java: Remove ".0" fractional parts in expected output,